1558aee81b853b00e5f8c0998133c1b3283c4b74 Fix: Active buttons were not showing as active at the top level when using DataTables styling
76b0d3a0c7dd7d81e3735014acd6ca58b2e7c537 Merge branch 'master' of github.com:DataTables/Buttons

Sync to source repo @76b0d3a0c7dd7d81e3735014acd6ca58b2e7c537

--- a/css/buttons.dataTables.css
+++ b/css/buttons.dataTables.css
@@ -170,20 +170,20 @@ input.dt-button.disabled {
   cursor: default;
   opacity: 0.4;
 }
-button.dt-button:active:not(.disabled),
-div.dt-button:active:not(.disabled),
-a.dt-button:active:not(.disabled),
-input.dt-button:active:not(.disabled) {
+button.dt-button.active:not(.disabled),
+div.dt-button.active:not(.disabled),
+a.dt-button.active:not(.disabled),
+input.dt-button.active:not(.disabled) {
   background-color: rgba(0, 0, 0, 0.1);
   /* Fallback */
   background: linear-gradient(to bottom, rgba(179, 179, 179, 0.1) 0%, rgba(0, 0, 0, 0.1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr="rgba(179, 179, 179, 0.1)", EndColorStr="rgba(0, 0, 0, 0.1)");
   box-shadow: inset 1px 1px 3px #999999;
 }
-button.dt-button:active:not(.disabled):hover:not(.disabled),
-div.dt-button:active:not(.disabled):hover:not(.disabled),
-a.dt-button:active:not(.disabled):hover:not(.disabled),
-input.dt-button:active:not(.disabled):hover:not(.disabled) {
+button.dt-button.active:not(.disabled):hover:not(.disabled),
+div.dt-button.active:not(.disabled):hover:not(.disabled),
+a.dt-button.active:not(.disabled):hover:not(.disabled),
+input.dt-button.active:not(.disabled):hover:not(.disabled) {
   box-shadow: inset 1px 1px 3px #999999;
   background-color: rgba(0, 0, 0, 0.1);
   /* Fallback */
